--- a/main.css
+++ b/main.css
@@ -34,6 +34,11 @@ header {
     padding: 20px;
 }
 
+label {
+    font-size: 600;
+    margin-bottom: 15px;
+}
+
 .about {
     display: flex;
     justify-content: space-around;
@@ -76,10 +81,65 @@ header {
     opacity: 0.8;
 }
 
+.form {
+    background-color: #1D263A;
+    color: #fff;
+    padding-top: 115px;
+    padding-bottom: 115px;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.form form {
+    display: grid;
+    grid-gap: 20px;
+    margin-top: 60px;
+}
+
+.form input, .form select {
+    font-size: 18px;
+    color: #213053;
+    height: 60px;
+    padding: 0px 20px 0px 20px;
+    border-radius: 15px;
+    border: none;
+}
+
+.form h1 {
+    font-size: 48px;
+}
+
+.form p {
+    font-size: 18px;
+    opacity: 0.65;
+}
+
 .form__container {
     width: 550px;
+}
+
+.form__group {
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+}
+
+.form__submit {
+    font-size: 18px;
+    font-weight: 600;
+    margin-top: 40px;
 }
 
 .header__logo {
     height: 30px;
 }
+
+input {
+    outline: none;
+  }
+
+select {
+    appearance: none;
+  }
