--- a/main.css
+++ b/main.css
@@ -49,6 +49,10 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 20px;
+    position: sticky;
+    background-color: #fff;
+    top: 0px;
+    z-index: 1;
 }
 
 label {
@@ -75,11 +79,6 @@ label {
     width: 500px;
 }
    
-  .about__sun-image {
-    width: 100px;
-    height: 100px;
-}
-
 .about button {
     font-size: 18px;
     border-radius: 20px;
@@ -96,6 +95,13 @@ label {
     font-size: 18px;
     line-height: 30px;
     opacity: 0.8;
+}
+
+.about__sun-image {
+    width: 100px;
+    height: 100px;
+    position: absolute;
+    animation: rotation 10s linear infinite;
 }
 
 .form {
@@ -185,3 +191,87 @@ input {
 select {
     appearance: none;
   }
+
+
+@keyframes rotation {
+    0%{
+        transform: rotate(0deg);
+    }
+    
+    100%{
+        transform: rotate(360deg);
+    }
+}
+
+
+
+/* Планшеты */
+@media (max-width: 1024px) {
+    .about {
+        padding: 115px 20px;
+    }
+  
+    .about h1 {
+        font-size: 36px;
+        line-height: 40px;
+    }
+  
+    .about__image {
+        width: 280px;
+    }
+  
+    .about__sun-image {
+        width: 75px;
+        height: 75px;
+    }
+ }
+  
+ /* Мобильные устройства */
+ @media (max-width: 720px) {
+    header {
+        padding: 10px;
+    }
+  
+    .header__logo {
+        height: 20px;
+    }
+  
+    header a {
+        margin-right: 10px;
+    }
+  
+    .about {
+        flex-direction: column-reverse;
+        padding: 50px 10px;
+    }
+  
+    .about h1 {
+        font-size: 36px;
+        line-height: 40px;
+    }
+  
+    .about__image {
+        width: 280px;
+    }
+  
+    .about__sun-image {
+        width: 75px;
+        height: 75px;
+    }
+  
+    .form {
+        padding: 50px 10px;
+    }
+  
+    .form h1 {
+        font-size: 36px;
+    }
+  
+    footer {
+        padding: 50px 10px;
+    }
+  
+    .footer__container {
+        flex-direction: column;
+    }
+ }
